Java 11 changes
Run with Java 11, removed deprecated observer and newInstance code
Tried some post Java 8 features, such as the flow api to replace
observer.
Fixed some issues with sound
Added wireframe shader